--- a/06 - add todo html/index.html
+++ b/06 - add todo html/index.html
@@ -10,11 +10,11 @@
     <main>
         <h1>My ToDos</h1>
         <p>This is my ToDo list</p>
-        <div id="new-todo">
+        <form id="new-todo">
             <input type="text" id="todo-input" placeholder="Add a new todo" 
             />  
-            <button id="add-todo">Add ToDo</button>
-        </div>
+            <input type="submit" id="add-todo" value="Add ToDo"></input>
+        </form>
         <div id="todo-list"></div>
     </main>
     <script src="./script.js"></script>
